--- a/src/app/pages/all-quiz/all-quiz.page.html
+++ b/src/app/pages/all-quiz/all-quiz.page.html
@@ -3,14 +3,14 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Quizzes</ion-title>
+    <ion-title>Quizes</ion-title>
     <ion-buttons slot="secondary">
       <ion-button (click)="resetAllFilters()">
         <ion-icon slot="icon-only" name="refresh"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
-  <ion-searchbar animated (ionInput)="filterQuiz($event)" placeholder="Search.." style="background-color: teal">
+  <ion-searchbar animated (ionInput)="filterQuiz($event)" placeholder="Buscar.." style="background-color: teal">
   </ion-searchbar>
 
 </ion-header>
@@ -23,7 +23,7 @@
   <ion-item *ngFor="let quiz of quizes" [routerLink]="[ '/quiz-detail/', quiz.key ]">
     <ion-label>
       {{quiz.title}}
-      <p>Language: {{quiz.language}}</p>
+      <p>Idioma: {{quiz.language}}</p>
     </ion-label>
     <div fxLayoutAlign="end">
       <ion-badge color="primary">{{quiz.category}}</ion-badge>
