--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>EQuiz</ion-title>
+    <ion-title>ECo Quiz</ion-title>
     <ion-buttons slot="secondary">
       <ion-button [routerLink]="[ '/category']">
         <ion-icon slot="icon-only" name="apps"></ion-icon>
@@ -37,20 +37,20 @@
   <app-categories (category)="getSelectedCategory($event)"></app-categories>
 
   <div fxLayout="row" fxLayoutAlign="center">
-    <h3>Popular Quizes</h3>
+    <h3>Mais populares</h3>
   </div>
 
   <ion-item *ngFor="let quiz of quizes | slice:0:5" [routerLink]="[ '/quiz-detail/', quiz.key ]">
     <ion-label>
       {{quiz.title}}
-      <p>Language: {{quiz.language}}</p>
+      <p>Idioma: {{quiz.language}}</p>
     </ion-label>
     <ion-label fxLayoutAlign="end">
       <ion-badge color="primary">{{quiz.category}}</ion-badge>
     </ion-label>
   </ion-item>
 
-  <ion-button fxLayoutAlign="center" fill="outline" color="primary" [routerLink]="[ '/all-quiz', '' ]">LOAD ALL
+  <ion-button fxLayoutAlign="center" fill="outline" color="primary" [routerLink]="[ '/all-quiz', '' ]">Carregar todos
   </ion-button>
 
 
