--- a/src/app/pages/quiz/quiz.page.html
+++ b/src/app/pages/quiz/quiz.page.html
@@ -40,7 +40,7 @@
   </div>
 
   <div fxLayout="row" fxLayoutAlign="center">
-    <ion-button color="primary" (click)="openDialog()">CONFIRM</ion-button>
+    <ion-button color="primary" (click)="openDialog()">CONFIRMAR</ion-button>
   </div>
 
 </ion-content>
