--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -24,7 +24,7 @@
   <ion-slides [options]="slideOptsOne">
     <ion-slide>
       <img
-        src="https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/ruoEhTkNeiwq2lefr/videoblocks-quiz-neon-light-on-brick-wall-night-club-bar-blinking-sign-style-video-available-in-4k-fullhd-and-hd-render-footage_s3alkh5hg_thumbnail-full01.png" />
+        src="../../../assets/imgs/banner01.png" />
     </ion-slide>
     <ion-slide>
       <img src="https://quikchex.in/wp-content/uploads/2017/10/payroll-quiz.jpg" />
