alterações nos cards do quiz

--- a/src/app/pages/exam-result/exam-result.page.html
+++ b/src/app/pages/exam-result/exam-result.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Result</ion-title>
+    <ion-title>Resultado</ion-title>
   </ion-toolbar>
 </ion-header>
 
