--- a/src/app/pages/profile/profile-edit/profile-edit.page.html
+++ b/src/app/pages/profile/profile-edit/profile-edit.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Update Profile</ion-title>
+    <ion-title>Atualizar Perfil</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -16,7 +16,7 @@
     [formGroup]="profileForm" (ngSubmit)="onProfileFormSubmit(profileForm.value)">
     <mat-card-header>
       <mat-card-title>
-        <h2>USER DETAILS</h2>
+        <h2>DATALHES DO USUÁRIO</h2>
       </mat-card-title>
     </mat-card-header>
 
@@ -26,20 +26,20 @@
     </mat-form-field>
 
     <mat-form-field fxFlex>
-      <mat-label>Username</mat-label>
+      <mat-label>Usuário</mat-label>
       <input matInput formControlName="userName" placeholder="Username" autocomplete="off">
     </mat-form-field>
 
     <mat-form-field fxFlex>
-      <mat-label>First Name</mat-label>
+      <mat-label>Nome</mat-label>
       <input matInput formControlName="firstName" placeholder="First Name" autocomplete="off">
     </mat-form-field>
 
     <mat-form-field fxFlex>
-      <mat-label>Last Name</mat-label>
+      <mat-label>Sobrenome</mat-label>
       <input matInput formControlName="lastName" placeholder="Last Name" autocomplete="off">
     </mat-form-field>
 
-    <ion-button color="primary" type="submit" fxLayoutAlign="center">SAVE CHANGES</ion-button>
+    <ion-button color="primary" type="submit" fxLayoutAlign="center">SALVAR</ion-button>
   </form>
 </ion-content>
