--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>Profile</ion-title>
+    <ion-title>Perfil</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -13,11 +13,11 @@
     <input matInput autocomplete="off" disabled [(ngModel)]="email" />
   </mat-form-field>
 
-  <ion-button fxLayoutAlign="center" color="primary" [routerLink]="['/profile-edit/']">UPDATE PROFILE</ion-button>
-  <ion-button fxLayoutAlign="center" color="danger" (click)="logOut()">LOGOUT</ion-button>
+  <ion-button fxLayoutAlign="center" color="primary" [routerLink]="['/profile-edit/']">ATUALIZAR PERFIL</ion-button>
+  <ion-button fxLayoutAlign="center" color="danger" (click)="logOut()">SAIR</ion-button>
 
   <div fxLayout="row" fxLayoutAlign="center">
-    <h3>History</h3>
+    <h3>HISTÓRICO</h3>
   </div>
 
   <ion-item *ngFor="let exam of exams;let i = index" [routerLink]="[ '/exam-result/', exam.key ]">
