--- a/src/app/pages/profile/profile-edit/profile-edit.page.html
+++ b/src/app/pages/profile/profile-edit/profile-edit.page.html
@@ -27,17 +27,17 @@
 
     <mat-form-field fxFlex>
       <mat-label>Usuário</mat-label>
-      <input matInput formControlName="userName" placeholder="Username" autocomplete="off">
+      <input matInput formControlName="userName" placeholder="Usuário" autocomplete="off">
     </mat-form-field>
 
     <mat-form-field fxFlex>
       <mat-label>Nome</mat-label>
-      <input matInput formControlName="firstName" placeholder="First Name" autocomplete="off">
+      <input matInput formControlName="firstName" placeholder="Nome" autocomplete="off">
     </mat-form-field>
 
     <mat-form-field fxFlex>
       <mat-label>Sobrenome</mat-label>
-      <input matInput formControlName="lastName" placeholder="Last Name" autocomplete="off">
+      <input matInput formControlName="lastName" placeholder="Sobrenome" autocomplete="off">
     </mat-form-field>
 
     <ion-button color="primary" type="submit" fxLayoutAlign="center">SALVAR</ion-button>
