--- a/src/app/pages/exam-result/exam-result.page.html
+++ b/src/app/pages/exam-result/exam-result.page.html
@@ -9,22 +9,30 @@
 
 <ion-content>
 
-  <div fxLayout="row" fxLayoutAlign="center" *ngIf="!isLoading" class="t-center">
-    <h3>{{exam.quiz.title}}</h3>
-  </div>
 
-  <ion-card *ngIf="!isLoading" class="t-center fw-700">
-    <p>Total acertos: {{exam.correct}}</p>
-    <p>Total erradas: {{exam.mistake}}</p>
-    <p>Total sem resposta: {{exam.unanswered}}</p>
-  </ion-card>
+    <ion-card>
+      
+        <ion-card-header>
+          <ion-card-title *ngIf="!isLoading">{{exam.quiz.title}}</ion-card-title>
+        </ion-card-header>
+        <ion-card-content *ngIf="!isLoading" >
+            <p class="acerto">Total acertos: {{exam.correct}}</p>
+            <p class="errou">Total erradas: {{exam.mistake}}</p>
+            <p class="semresposta">Total sem resposta: {{exam.unanswered}}</p>
+        </ion-card-content>
+      </ion-card>
+
 
   <div *ngIf="!isLoading">
     <ion-item *ngFor="let question of exam.quiz.questions; let i=index">
       <ion-label text-wrap>
         {{i+1}}. {{question.question}}
-        <p>Sua Resposta: {{question.answered}} </p>
-        <p>Resposta Correta: {{question.answerRight}}</p>
+        <ion-item>
+           Sua Resposta: {{question.answered}} 
+        </ion-item>
+        <ion-item>
+           Resposta Correta: {{question.answerRight}}
+        </ion-item>      
       </ion-label>
 
       <div fxLayoutAlign="end">
