--- a/src/app/pages/exam-result/exam-result.page.scss
+++ b/src/app/pages/exam-result/exam-result.page.scss
@@ -1,11 +1,22 @@
 .acerto{
     color: blue;
+    font-size: 1.5em;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .errou{
     color: red;
+    font-size: 1.5em;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .semresposta{
     color: gray;
+    font-size: 1.5em;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+ion-card-title{
+    text-align: center;
+    
 }
