modificacoes paca rai

--- a/src/app/pages/exam-result/exam-result.page.html
+++ b/src/app/pages/exam-result/exam-result.page.html
@@ -4,6 +4,12 @@
       <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-title>Resultado</ion-title>
+    <ion-buttons slot="secondary">
+      <ion-button [routerLink]="[ '/home']">
+        <ion-icon slot="icon-only" name="home"></ion-icon>
+
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
