--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>ECo Quiz</ion-title>
+    <ion-title>((ECO)) Quiz</ion-title>
     <ion-buttons slot="secondary">
       <ion-button [routerLink]="[ '/category']">
         <ion-icon slot="icon-only" name="apps"></ion-icon>
