--- a/src/app/pages/auth/register/register.page.html
+++ b/src/app/pages/auth/register/register.page.html
@@ -24,7 +24,7 @@
 
           <mat-form-field class="w-100" fxFlex>
             <mat-label>Email</mat-label>
-            <input matInput formControlName="email" placeholder="Email" autocomplete="off">
+            <input matInput formControlName="email" autocapitalize="none" placeholder="Email" autocomplete="off">
             <mat-error *ngIf="registerForm.controls.email.errors?.required">Email é obrigatório</mat-error>
             <mat-error *ngIf="registerForm.controls.email.hasError('invalidEmail')">Endereço de e-mail inválido</mat-error>
           </mat-form-field>
