novos ajustes e finalizacao

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -7,10 +7,8 @@
 
 .my-custom-modal-css .modal-wrapper {
     --background: transparent !important;
-    height: 80%;
-    position: center; 
-    margin-left: 5%;
-    margin-right: 5%;
-    
-	
+    --height:55%;
+    --width:55%;
+     
+            
  }
