--- a/src/app/modal/results/results.page.html
+++ b/src/app/modal/results/results.page.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content padding="none">
 
 
   <ion-img *ngIf="results == 100" src="../../../assets/imgs/campeao.png"></ion-img>
